# spaces

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  Dockerfile  README.md  admin_utils.py  airtable_service.py  allowed_imports.json  app.py  better_stack_logger.py  changelog.md  dockerfile  fix_innerhtml.py  github_routes.py  github_routes_helper.py  hackatime_service.py  main.py  models.py  piston_service.py  pyproject.toml  replit.nix  requirements.txt  run_migrations.py  setup_db.py  slack_auth.py  slack_routes.py  start_hackatime_service.py  update_club_schema.py  update_collaboration_default.py  update_language_extensions.py  update_site_collaborator.py
attached_assets/: Pasted--2025-04-01-01-17-50-531-INFO-Starting-Hack-Club-Spaces-application-2025-04-01-01-17-50-INFO--1743470375288.txt  Pasted--2025-04-01-01-22-11-549-INFO-Response-GET-s-df-script-js-200-2025-04-01-01-22-11-INFO-Re-1743470568578.txt  Pasted--31-21-28-03-832-INFO-in-debughelpers-Locating-template-editor-html-1-trying-loader-of-app-1743456495222.txt  Pasted--Checking-Hackatime-API-connection-231-467-Web-editor-loaded-checking-for-Hackatime-integra-1743463590182.txt  Pasted--Checking-Hackatime-API-connection-231-467-Web-editor-loaded-checking-for-Hackatime-integrati-1743463919395.txt  Pasted--Hackatime-Heartbeat-response-status-200-hackatime-tracker-js-612-Hackatime-Heartbeat-response--1743539777042.txt  Pasted--Hackatime-Heartbeat-success-for-index-html-hackatime-tracker-js-638-Hackatime-Response-data-Obj-1743736118818.txt  content-1743456278929.md  content-1743537766198.md  (+20 more)
(+91 files in other folders)
